@@ -11,7 +11,7 @@ after turn_around => sub {
 after can_send_to_target => sub {
     my ($self, $target) = @_;
     my $empire = $self->body->empire;
-    my $next_colony_cost = $empire->next_colony_cost;
+    my $next_colony_cost = $empire->next_colony_cost($self->type);
     confess [ 1011, 'You do not have enough happiness to colonize another planet. You need '.$next_colony_cost.' happiness.', [$next_colony_cost]] unless ( $self->body->happiness > $next_colony_cost);
     return 1;
 };
@@ -19,7 +19,7 @@ after can_send_to_target => sub {
 after send => sub {
     my $self = shift;
     return if ($self->direction eq 'in');
-    my $next_colony_cost = $self->body->empire->next_colony_cost(-1);
+    my $next_colony_cost = $self->body->empire->next_colony_cost($self->type, -1);
     $self->body->spend_happiness($next_colony_cost)->update;
     $self->payload({ colony_cost => $next_colony_cost });
     $self->update;
